feat(client): skill actions
