# apps/errant-tower-client/src/api/swagger.json
@@ -298,7 +298,24 @@
                 },
                 "responses": {
                     "200": {
-                        "description": "OK"
+                        "description": "OK",
+                        "content": {
+                            "text/plain": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/LearnSkillResponse"
+                                }
+                            },
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/LearnSkillResponse"
+                                }
+                            },
+                            "text/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/LearnSkillResponse"
+                                }
+                            }
+                        }
                     }
                 }
             }
@@ -313,17 +330,17 @@
                         "content": {
                             "text/plain": {
                                 "schema": {
-                                    "$ref": "#/components/schemas/ResetSkillsTreeResponse"
+                                    "$ref": "#/components/schemas/ResetSkillsResponse"
                                 }
                             },
                             "application/json": {
                                 "schema": {
-                                    "$ref": "#/components/schemas/ResetSkillsTreeResponse"
+                                    "$ref": "#/components/schemas/ResetSkillsResponse"
                                 }
                             },
                             "text/json": {
                                 "schema": {
-                                    "$ref": "#/components/schemas/ResetSkillsTreeResponse"
+                                    "$ref": "#/components/schemas/ResetSkillsResponse"
                                 }
                             }
                         }
@@ -542,79 +559,15 @@
                 "additionalProperties": false
             },
             "GetSkillTreeResponse": {
-                "required": [
-                    "bellicosity",
-                    "blade",
-                    "bow",
-                    "hammer",
-                    "lance",
-                    "perspicacity",
-                    "sagacity",
-                    "staff",
-                    "tenacity",
-                    "vivacity"
-                ],
+                "required": ["paths", "skillPoints"],
                 "type": "object",
                 "properties": {
-                    "blade": {
-                        "type": "array",
-                        "items": {
-                            "$ref": "#/components/schemas/UserSkill"
-                        }
+                    "skillPoints": {
+                        "type": "integer",
+                        "format": "int32"
                     },
-                    "tenacity": {
-                        "type": "array",
-                        "items": {
-                            "$ref": "#/components/schemas/UserSkill"
-                        }
-                    },
-                    "hammer": {
-                        "type": "array",
-                        "items": {
-                            "$ref": "#/components/schemas/UserSkill"
-                        }
-                    },
-                    "bellicosity": {
-                        "type": "array",
-                        "items": {
-                            "$ref": "#/components/schemas/UserSkill"
-                        }
-                    },
-                    "lance": {
-                        "type": "array",
-                        "items": {
-                            "$ref": "#/components/schemas/UserSkill"
-                        }
-                    },
-                    "vivacity": {
-                        "type": "array",
-                        "items": {
-                            "$ref": "#/components/schemas/UserSkill"
-                        }
-                    },
-                    "bow": {
-                        "type": "array",
-                        "items": {
-                            "$ref": "#/components/schemas/UserSkill"
-                        }
-                    },
-                    "perspicacity": {
-                        "type": "array",
-                        "items": {
-                            "$ref": "#/components/schemas/UserSkill"
-                        }
-                    },
-                    "staff": {
-                        "type": "array",
-                        "items": {
-                            "$ref": "#/components/schemas/UserSkill"
-                        }
-                    },
-                    "sagacity": {
-                        "type": "array",
-                        "items": {
-                            "$ref": "#/components/schemas/UserSkill"
-                        }
+                    "paths": {
+                        "$ref": "#/components/schemas/SkillTreePaths"
                     }
                 },
                 "additionalProperties": false
@@ -629,80 +582,30 @@
                 },
                 "additionalProperties": false
             },
-            "ResetSkillsTreeResponse": {
-                "required": [
-                    "bellicosity",
-                    "blade",
-                    "bow",
-                    "hammer",
-                    "lance",
-                    "perspicacity",
-                    "sagacity",
-                    "staff",
-                    "tenacity",
-                    "vivacity"
-                ],
+            "LearnSkillResponse": {
+                "required": ["paths", "skillPoints"],
                 "type": "object",
                 "properties": {
-                    "blade": {
-                        "type": "array",
-                        "items": {
-                            "$ref": "#/components/schemas/UserSkill"
-                        }
+                    "skillPoints": {
+                        "type": "integer",
+                        "format": "int32"
                     },
-                    "tenacity": {
-                        "type": "array",
-                        "items": {
-                            "$ref": "#/components/schemas/UserSkill"
-                        }
+                    "paths": {
+                        "$ref": "#/components/schemas/SkillTreePaths"
+                    }
+                },
+                "additionalProperties": false
+            },
+            "ResetSkillsResponse": {
+                "required": ["paths", "skillPoints"],
+                "type": "object",
+                "properties": {
+                    "skillPoints": {
+                        "type": "integer",
+                        "format": "int32"
                     },
-                    "hammer": {
-                        "type": "array",
-                        "items": {
-                            "$ref": "#/components/schemas/UserSkill"
-                        }
-                    },
-                    "bellicosity": {
-                        "type": "array",
-                        "items": {
-                            "$ref": "#/components/schemas/UserSkill"
-                        }
-                    },
-                    "lance": {
-                        "type": "array",
-                        "items": {
-                            "$ref": "#/components/schemas/UserSkill"
-                        }
-                    },
-                    "vivacity": {
-                        "type": "array",
-                        "items": {
-                            "$ref": "#/components/schemas/UserSkill"
-                        }
-                    },
-                    "bow": {
-                        "type": "array",
-                        "items": {
-                            "$ref": "#/components/schemas/UserSkill"
-                        }
-                    },
-                    "perspicacity": {
-                        "type": "array",
-                        "items": {
-                            "$ref": "#/components/schemas/UserSkill"
-                        }
-                    },
-                    "staff": {
-                        "type": "array",
-                        "items": {
-                            "$ref": "#/components/schemas/UserSkill"
-                        }
-                    },
-                    "sagacity": {
-                        "type": "array",
-                        "items": {
-                            "$ref": "#/components/schemas/UserSkill"
-                        }
+                    "paths": {
+                        "$ref": "#/components/schemas/SkillTreePaths"
                     }
                 },
                 "additionalProperties": false
@@ -765,6 +668,7 @@
                     "BloodthirstyBlade",
                     "GreatVigor",
                     "Armorer",
+                    "Resistance",
                     "Energizer",
                     "Deflect",
                     "HeartsResolve"
@@ -841,6 +745,84 @@
                     "points": {
                         "type": "integer",
                         "format": "int32"
+                    }
+                },
+                "additionalProperties": false
+            },
+            "SkillTreePaths": {
+                "required": [
+                    "bellicosity",
+                    "blade",
+                    "bow",
+                    "hammer",
+                    "lance",
+                    "perspicacity",
+                    "sagacity",
+                    "staff",
+                    "tenacity",
+                    "vivacity"
+                ],
+                "type": "object",
+                "properties": {
+                    "blade": {
+                        "type": "array",
+                        "items": {
+                            "$ref": "#/components/schemas/UserSkill"
+                        }
+                    },
+                    "tenacity": {
+                        "type": "array",
+                        "items": {
+                            "$ref": "#/components/schemas/UserSkill"
+                        }
+                    },
+                    "hammer": {
+                        "type": "array",
+                        "items": {
+                            "$ref": "#/components/schemas/UserSkill"
+                        }
+                    },
+                    "bellicosity": {
+                        "type": "array",
+                        "items": {
+                            "$ref": "#/components/schemas/UserSkill"
+                        }
+                    },
+                    "lance": {
+                        "type": "array",
+                        "items": {
+                            "$ref": "#/components/schemas/UserSkill"
+                        }
+                    },
+                    "vivacity": {
+                        "type": "array",
+                        "items": {
+                            "$ref": "#/components/schemas/UserSkill"
+                        }
+                    },
+                    "bow": {
+                        "type": "array",
+                        "items": {
+                            "$ref": "#/components/schemas/UserSkill"
+                        }
+                    },
+                    "perspicacity": {
+                        "type": "array",
+                        "items": {
+                            "$ref": "#/components/schemas/UserSkill"
+                        }
+                    },
+                    "staff": {
+                        "type": "array",
+                        "items": {
+                            "$ref": "#/components/schemas/UserSkill"
+                        }
+                    },
+                    "sagacity": {
+                        "type": "array",
+                        "items": {
+                            "$ref": "#/components/schemas/UserSkill"
+                        }
                     }
                 },
                 "additionalProperties": false
